--- a/config/convolutional/lossy_coord_v2/baseline_r1.yaml
+++ b/config/convolutional/lossy_coord_v2/baseline_r1.yaml
@@ -40,10 +40,11 @@ train:
     train_filelist_path: 'all_list_obj.txt'
     train_divisions: 'all'
     data_format: '.obj'
-    mesh_sample_points_num: 2500000
+    mesh_sample_points_num: 500000
     mesh_sample_point_method: 'uniform'
     mesh_sample_point_resolution: 256
     random_rotation: True
+
 
 test:
   batch_size: 1
