--- a/config/convolutional/lossy_coord_v2/baseline_r-1.yaml
+++ b/config/convolutional/lossy_coord_v2/baseline_r-1.yaml
@@ -1,5 +1,4 @@
 # include "config/convolutional/lossy_coord_v2/baseline_r1.yaml"
 
-train:
-  dataset:
-    mesh_sample_points_num: 500000
+model:
+  bits_loss_factor: 0.2
