--- a/config/convolutional/lossy_coord_lossy_color/baseline_r1.yaml
+++ b/config/convolutional/lossy_coord_lossy_color/baseline_r1.yaml
@@ -25,28 +25,29 @@ train:
   more_reproducible: True
   amp: False
   find_unused_parameters: False
-  batch_size: 4
+  batch_size: 8
   num_workers: 4
-  optimizer: [AdamW, AdamW, AdamW]
+  optimizer: [AdamW, AdamW]
   momentum: 0.9
-  weight_decay: [0.00001, 0.00001, 0.0]
+  weight_decay: [0.0001, 0.0]
   max_grad_norm: 1.0
 
-  learning_rate: [0.002, 0.0006, 0.0002]
-  epochs: 350
+  learning_rate: [0.0006, 0.0002]
+  epochs: 100
 
   scheduler: Step
-  lr_step_size: 55
+  lr_step_size: 20
   lr_step_gamma: 0.3
 
   log_frequency: 10
-  ckpt_frequency: 10
-  test_frequency: 10
+  ckpt_frequency: 5
+  test_frequency: 0
 
-  dataset_path: 'lib.datasets.PlyVoxel.8iVFBv2'
+  dataset_path: 'lib.datasets.PlyVoxel.Base'
   dataset:
-    filelist_path: 'list_longdress_soldier.txt'
-    kd_tree_partition_max_points_num: 120000
+    root: ['datasets/MVUB', 'datasets/8iVFBv2', 'datasets/Owlii']
+    filelist_path: ['list_andrew_david_sarah10.txt', 'list_longdress_solider.txt', 'list_exercise_model.txt']
+    kd_tree_partition_max_points_num: 200000
     with_color: True
     random_rotation: False
     random_flip: True
@@ -58,8 +59,9 @@ test:
   num_workers: 0
   log_frequency: 1
   save_results: True
-  dataset_path:
-    'lib.datasets.PlyVoxel.MPEG_GPCC_CTC_Solid'
+  dataset_path: 'lib.datasets.PlyVoxel.MPEG_GPCC_CTC_Solid'
   dataset:
+    root: ['datasets/MVUB', 'datasets/8iVFBv2', 'datasets/Owlii']
+    filelist_path: ['list_phil_ricardo10.txt', 'list_loot_redandblack.txt', 'list_basketball_player_dancer.txt']
     kd_tree_partition_max_points_num: 0
     with_color: True
