--- a/config/convolutional/lossy_coord_v2/baseline_r1.yaml
+++ b/config/convolutional/lossy_coord_v2/baseline_r1.yaml
@@ -8,7 +8,7 @@ model:
   adaptive_pruning: True
   geo_lossl_if_sample: [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1]
   geo_lossl_channels: [64, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 1]
-  bits_loss_factor: 0.6
+  bits_loss_factor: 0.4
   warmup_fea_loss_steps: 5000
   warmup_fea_loss_factor: 0.01
 
@@ -20,20 +20,20 @@ train:
   find_unused_parameters: False
   batch_size: 8
   num_workers: 4
-  optimizer: [AdamW, AdamW, AdamW]
+  optimizer: [AdamW, AdamW]
   momentum: 0.9
-  weight_decay: [0.0001, 0.0001, 0.0]
+  weight_decay: [0.0001, 0.0]
   max_grad_norm: 1.0
 
-  learning_rate: [0.0005, 0.0003, 0.0001]
-  epochs: 70
+  learning_rate: [0.0003, 0.0001]
+  epochs: 50
 
   scheduler: Step
   lr_step_size: 20
   lr_step_gamma: 0.3
 
-  ckpt_frequency: 1
-  test_frequency: 4
+  ckpt_frequency: 5
+  test_frequency: 5
 
   dataset_path: 'lib.datasets.ShapeNetCorev2'
   dataset:
@@ -44,6 +44,7 @@ train:
     mesh_sample_point_method: 'uniform'
     mesh_sample_point_resolution: 256
     random_rotation: True
+    resolution: 128
 
 
 test:
