--- a/config/convolutional/lossy_coord_v2/wo_residual_r5.yaml
+++ b/config/convolutional/lossy_coord_v2/wo_residual_r5.yaml
@@ -2,8 +2,9 @@
 
 model:
   skip_encoding_fea: -1
-  encoder_channels: [16, 64, 128]
-  decoder_channels: [64, 16]
+  encoder_channels: [16, 64, 128, 128]
+  decoder_channels: [128, 64, 16]
   geo_lossl_if_sample: [0, 1]
   geo_lossl_channels: [128, 128, 1]
-  bits_loss_factor: 0.8
+  bits_loss_factor: 1.2
+  warmup_fea_loss_steps: 10000
