--- a/config/convolutional/lossy_coord_v2/wo_residual_r5.yaml
+++ b/config/convolutional/lossy_coord_v2/wo_residual_r5.yaml
@@ -1,6 +1,7 @@
 # include "config/convolutional/lossy_coord_v2/wo_residual_r1.yaml"
 
 model:
+  skip_encoding_fea: -1
   encoder_channels: [16, 64, 128, 128]
   decoder_channels: [128, 64, 16]
   geo_lossl_if_sample: [0, 1]
