Rename. Fix a bug.

--- a/config/convolutional/lossy_coord_v2/gpcc_based_r1.yaml
+++ b/config/convolutional/lossy_coord_v2/gpcc_based_r1.yaml
@@ -14,6 +14,7 @@ model:
   warmup_fea_loss_steps: 5000
   warmup_fea_loss_factor: 0.01
 
+test:
   dataset_path:
     'lib.datasets.PlyVoxel.MPEG_GPCC_CTC_Solid_MVUB'
   dataset:
