--- a/config/convolutional/lossy_coord/baseline.yaml
+++ b/config/convolutional/lossy_coord/baseline.yaml
@@ -57,4 +57,4 @@ test:
     'lib.datasets.PlyVoxel.MPEG_GPCC_CTC_DenseVox14_Solid_MVUB'
   dataset:
     kd_tree_partition_max_points_num: [4000000, 0, 0, 0, 0]
-    test_time_coord_scaler: [0.25, 1.0, 1.0, 1.0, 1.0]
+    coord_scaler: [0.25, 1.0, 1.0, 1.0, 1.0]
