--- a/config/convolutional/lossl_coord/avs/kitti_ford_livox_test_r2.yaml
+++ b/config/convolutional/lossl_coord/avs/kitti_ford_livox_test_r2.yaml
@@ -1,9 +1,10 @@
-# include "config/convolutional/lossl_coord/avs/kitti_ford_livox_test_r1.yaml"
+# include "config/convolutional/lossl_coord/avs/kitti_ford_livox.yaml"
 
 model:
   skip_top_scales_num: 1
 
 
 test:
+  from_ckpt: weights/convolutional/lossl_coord/avs/kitti_ford_livox.pt
   dataset:
-    coord_scaler: 0.125
+    coord_scaler: 0.5
