--- a/config/convolutional/lossl_coord/avs/kitti_ford_livox_test_r9.yaml
+++ b/config/convolutional/lossl_coord/avs/kitti_ford_livox_test_r9.yaml
@@ -1,9 +1,9 @@
 # include "config/convolutional/lossl_coord/avs/kitti_ford_livox_test_r1.yaml"
 
 model:
-  skip_top_scales_num: 6
+  skip_top_scales_num: 8
 
 
 test:
   dataset:
-    coord_scaler: 0.015625
+    coord_scaler: 0.00390625
