--- a/config/convolutional/lossl_coord/kitti_ford.yaml
+++ b/config/convolutional/lossl_coord/kitti_ford.yaml
@@ -1,9 +1,5 @@
 model_module_path: models.convolutional.lossl_coord
 
-model:
-  max_stride_wo_recurrent: 32
-  max_stride: 8192
-
 
 train:
   rundir_name: 'train_convolutional_<autoindex>'
@@ -14,35 +10,38 @@ train:
   weight_decay: 0.0001
   max_grad_norm: 1.0
 
-  ema: False
+  ema: True
+  ema_warmup: True
+  ema_warmup_gamma: 1.0
+  ema_warmup_power: 0.8
 
   learning_rate: 0.0001
-  epochs: 60
+  epochs: 80
 
   scheduler: Step
-  lr_step_size: 60
+  lr_step_size: 80
   lr_step_gamma: 0.3
 
   ckpt_frequency: 5
   test_frequency: 0
 
-  dataset_module_path: 'lib.datasets.PlyVoxel.Base'
+  dataset_module_path: 'lib.datasets.KITTIOdometry'
   dataset:
-    root: 'datasets/Ford'
-    filelist_path: 'train_list.txt'
-    coord_scaler: 0.25
     random_flip: True
     morton_sort: True
     morton_sort_inverse: True
-    resolution: 30001
+    resolution: 65536
+    ply_file_root: 'datasets/Ford'
+    ply_file_coord_scaler: 0.25
+    ply_file_resolution: 30001
 
 
 test:
   num_workers: 8
-  dataset_module_path: 'lib.datasets.PlyVoxel.Base'
+  dataset_module_path: 'lib.datasets.KITTIOdometry'
   dataset:
-    root: 'datasets/Ford'
-    filelist_path: 'test_list.txt'
-    coord_scaler: 0.25
     morton_sort: False
-    resolution: 30001
+    resolution: 65536
+    ply_file_root: 'datasets/Ford'
+    ply_file_coord_scaler: 0.25
+    ply_file_resolution: 30001
