AVS AIPCC CTC - Static LiDAR track

--- a/config/convolutional/lossl_coord/avs/kitti_ford_livox_kitti_det_large.yaml
+++ b/config/convolutional/lossl_coord/avs/kitti_ford_livox_kitti_det_large.yaml
@@ -6,16 +6,17 @@ model:
   max_stride: 16384
   fea_stride: 8
   use_more_ch_for_multi_step_pred: True
+  cal_avs_pc_evalue: True
 
 
 train:
   dataset_module_path: 'lib.datasets.PlyVoxel.Base'
   dataset:
     root:
-      - 'datasets/AVS_AIPCC_CfE/Cat2A-1/kitti'
-      - 'datasets/AVS_AIPCC_CfE/Cat2A-1/Ford_01_AVS_1mm'
-      - 'datasets/AVS_AIPCC_CfE/Cat2A-1/Ford_02_AVS_1mm'
-      - 'datasets/AVS_AIPCC_CfE/Cat2A-1/Livox_01_all_in_one_1mm'
+      - 'datasets/AVS_AIPCC/Cat4A/kitti'
+      - 'datasets/AVS_AIPCC/Cat4A/Ford_01_AVS_1mm'
+      - 'datasets/AVS_AIPCC/Cat4A/Ford_02_AVS_1mm'
+      - 'datasets/AVS_AIPCC/Cat4A/Livox_01_all_in_one_1mm'
     coord_scaler: 0.25
     random_flip: True
     morton_sort: True
@@ -27,9 +28,9 @@ test:
   dataset_module_path: 'lib.datasets.PlyVoxel.Base'
   dataset:
     root:
-      - 'datasets/AVS_AIPCC_CfE/Cat2B-1/kitti'
-      - 'datasets/AVS_AIPCC_CfE/Cat2B-1/Ford_03_AVS_1mm'
-      - 'datasets/AVS_AIPCC_CfE/Cat2B-1/Livox_02_all_in_one_1mm'
+      - 'datasets/AVS_AIPCC/Cat4B/kitti'
+      - 'datasets/AVS_AIPCC/Cat4B/Ford_03_AVS_1mm'
+      - 'datasets/AVS_AIPCC/Cat4B/Livox_02_all_in_one_1mm'
     coord_scaler: 0.25
     morton_sort: False
     resolution: 30001
