--- a/config/convolutional/lossy_coord_v3/dense_r1.yaml
+++ b/config/convolutional/lossy_coord_v3/dense_r1.yaml
@@ -1,7 +1,7 @@
 model_module_path: models.convolutional.lossy_coord_v3
 model:
-  num_latents: [0, 0, 2]
-  lossl_geo_upsample: [0, 1, 1]
+  num_latents: [0, 0, 2, 0, 0]
+  lossl_geo_upsample: [0, 1, 1, 1, 1]
   max_stride: 64
   coord_recon_loss_factor: 2.0
   warmup_steps: 30000
@@ -22,7 +22,7 @@ train:
   ema_warmup_power: 0.75
 
   learning_rate: 0.0001
-  epochs: 50
+  epochs: 60
 
   scheduler: Step
   lr_step_size: 20
