--- a/config/convolutional/lossy_coord_v3/dense_r7.yaml
+++ b/config/convolutional/lossy_coord_v3/dense_r7.yaml
@@ -1,5 +1,6 @@
 # include "config/convolutional/lossy_coord_v3/dense_r1.yaml"
 
 model:
-  lossl_geo_upsample: [0, 0, 1, 1, 1]
+  num_latents: [0, 0, 0, 2, 0]
+  lossl_geo_upsample: [0, 0, 0, 1, 1]
   coord_recon_loss_factor: 0.1
